# dataform-repo-gcp

./: .gitignore  README.md  workflow_settings.yaml
.github/workflows/: ci-deploy-cloudfunctions-anac-oferta-demanda-aerea.yml  ci-deploy-composer-dags.yml  ci-deploy-terraform-bigquery.yml  ci-deploy-terraform-cloud-storage.yml  ci-deploy-terraform-composer.yml  ci-deploy-terraform-iam.yml
cloudfunctions/: README.md  pyproject.toml  requeriments.txt
cloudfunctions/src/cf_extract_anac_oferta_demanda_aerea_to_bronze/: deploy.sh  var.sh
cloudfunctions/src/cf_extract_anac_oferta_demanda_aerea_to_bronze/source_code/: config.yaml  ingestion.py  main.py  requirements.txt
composer/: README.md
composer/dags/: pipeline_anac_oferta_demanda_aerea.py
dataform/: workflow_settings.yaml
definitions/bronze/: anac_oferta_demanda_aerea.sqlx  anac_oferta_demanda_aerea_basica.sqlx  anac_oferta_demanda_aerea_combinada.sqlx  anbima_feriados_nacionais.sqlx
definitions/gold/: analise_passageiros_voos.sqlx  analise_trecho_consolidado_voo.sqlx  analise_trecho_detalhado_voo.sqlx  analise_voos.sqlx  tb_oferta_demanda_aerea_sbps.sqlx
definitions/silver/: tb_anac_oferta_demanda_aerea.sqlx  tb_anac_oferta_demanda_aerea_basica.sqlx  tb_anac_oferta_demanda_aerea_combinada.sqlx  tb_anbima_feriados_nacionais.sqlx
infra-as-code-terraform/1.iam/: backend.tf  iam_roles.tf  main.tf  service_accounts.tf  terraform.tfvars  variables.tf
infra-as-code-terraform/2.cloud_storage/: .terraform.lock.hcl  backend.tf  main.tf  terraform.tfvars  variables.tf
(+14 files in other folders)
