[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Marcus <marcus.moura@ipnet.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-kms = "^2.23.0"
crcmod = "^1.7"
pandas = "^2.2.2"
google-cloud-bigquery = "^3.24.0"
protobuf = ">3.20.1,<4.21.0"
pytz = "^2024.1"
loguru = "^0.7.2"
pyarrow = "^16.1.0"
requests = "^2.32.3"
setuptools = "^70.0.0"
unidecode = "^1.3.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
